package Alachisoft.NCache.Common.Protobuf;

message AverageResult
{
	optional string sum = 1;
	optional string count = 2;
}