import "ReaderResultSet.proto";


option java_outer_classname="ExecuteReaderResponseProtocol";
package Alachisoft.NCache.Common.Protobuf;
message ExecuteReaderResponse {
	repeated ReaderResultSet readerResultSets = 1;
}