import "RecordSetValue.proto";

package Alachisoft.NCache.Common.Protobuf;

message RecordRow
{
	repeated RecordSetValue values = 1;
}